fix: opacity 0 to all behind objects
Fixes https://github.com/emilkowalski/sonner/issues/633

--- a/src/styles.css
+++ b/src/styles.css
@@ -313,7 +313,7 @@ html[dir='rtl'],
   left: 0;
 }
 
-[data-sonner-toast][data-expanded='false'][data-front='false'][data-styled='true'] > * {
+[data-sonner-toast][data-expanded='false'][data-front='false'] > * {
   opacity: 0;
 }
 
